Update favicon on theme, fix footer logo positioning on tablet and mobile

--- a/frontsize/themes/a-pollo/widgets/apollo-logo.scss
+++ b/frontsize/themes/a-pollo/widgets/apollo-logo.scss
@@ -15,6 +15,10 @@
     @include element("icon") {
         @include icon("a-pollo-logo.svg", 240px, 80px);
         background-position: 0 100%;
+
+        @media #{$till-tablet-landscape} {
+            background-position: 50% 100%;
+        }
     }
 
     @include modifier("move-top") {
